2022-05-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: The DESIGNSIZE of output VF should be consistent with
	that of input JFM.
	https://github.com/texjporg/tex-jp-build/issues/140

2022-01-21  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uniblock.c, main.c: Update references Unicode blocks Blocks-14.0.0.txt.
	* COPYRIGHT: Update copyright year.
	* version.h, configure{,.ac}: Bump version to 20220121.

2021-07-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* makejvf.1: Document -O option added in version 20200412.

2021-01-12  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* main.c: Add size check to avoid segmentation fault.
	https://tug.org/pipermail/tlbuild/2021q1/004796.html

2020-04-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* main.c, write.c, makejvf.h:
	Add -O option: Omit entries in VF for characters with default metric.
	* version.h, configure{,.ac}: Bump version.
	* tests/skipjfmp_omit.vf: New test files.
	* Makefile.am, makejvf.test: Add new tests.
	Thanks to @aminophen for help.
	https://github.com/texjporg/tex-jp-build/issues/99

2020-02-16  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uniblock.c, main.c: Update references Unicode blocks Blocks-13.0.0.txt
	and CMap files. More strictly check an index.
	* COPYRIGHT: Update copyright years.
	* version.h: Bump version.

2019-02-23  Akira Kakuto  <kakuto@w32tex.org>

	* main.c: Support old compiler.
	* tfmread.c: Allocate one more byte for nbuff in tfmget().

2019-02-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* main.c, tfmread.c: Forbid invalid usages.
	  - Make sure the output TFM does not have the same
	    basename as the input TFM.
	  - Options -J, -U, -3, -H are useless in non-UCS mode,
	    throw a warning and ignore.
	  - Options -J and -U cannot be used at the same time,
	    throw an error.
	* version.h: Bump version.

2019-02-19  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfmread.c, tool.c: Avoid compiler warnings for fgetc().