@@ -1,2 +1,2 @@
-#define VERSION "20220121"
+#define VERSION "20220723"
 #define BUG_ADDRESS "issue@texjp.org"
